<resources>
    <string name="app_name">Pocket Trainer</string>
    <string name="log_in_button">Log In</string>
    <string name="create_account">Create New Account</string>
    <string name="continue_without_login">Continue With Out Logging In</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="categories">CATEGORIES</string>
    <string name="meat">Meat</string>
    <string name="dairy">Dairy</string>
    <string name="produce">Produce</string>
    <string name="item">Items</string>
    <string name="icon1">Icon_1</string>
    <string name="icon2">Icon_2</string>
    <string name="icon3">Icon_3</string>
    <string name="icon4">Icon_4</string>
    <string name="icon5">Icon_5</string>
    <string name="icon6">Icon_6</string>
    <string name="icon7">Icon_7</string>
    <string name="icon8">Icon_8</string>
    <string name="icon9">Icon_9</string>
    <string name="icon10">Icon_10</string>
    <string name="icon11">Icon_11</string>
    <string name="icon12">Icon_12</string>
    <string name="icon13">Icon_13</string>
    <string name="icon14">Icon_14</string>
    <string name="icon15">Icon_15</string>
    <string name="upper_body">Upper Body</string>
    <string name="legs">Legs</string>
    <string name="core">Core</string>
    <string name="Quads">Quads</string>
    <string name="Hamstrings">Hamstrings</string>
    <string name="Calves">Calves</string>
    <string name="Biceps">Biceps</string>
    <string name="Forearms">Forearms</string>
    <string name="Triceps">Triceps</string>
</resources>
