<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categories">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="372dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="19dp"
                    android:layout_marginRight="19dp"
                    android:text="@string/upper_body"
                    android:textSize="36sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/icon1"
                    android:onClick="showPopup"
                    android:src="@drawable/biceps"
                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView1" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/icon1"
                    android:onClick="showPopup"
                    android:src="@drawable/triceps"
                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView1"
                    app:layout_constraintTop_toBottomOf="@+id/textView1" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/icon1"
                    android:onClick="showPopup"
                    android:src="@drawable/forearms"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="110dp"
                    android:layout_height="31dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/Biceps"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView1" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="110dp"
                    android:layout_height="31dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/Triceps"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/textView7"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="110dp"
                    android:layout_height="31dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/Forearms"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/icon1"
                    android:onClick="showPopup"
                    android:src="@drawable/pecs"
                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView1" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="110dp"
                    android:layout_height="31dp"
                    android:layout_marginLeft="15dp"
                    android:text="Pecs"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/textView4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="372dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="19dp"
                    android:layout_marginRight="19dp"
                    android:text="@string/legs"
                    android:textSize="36sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/icon1"
                    android:onClick="showPopup"
                    android:src="@drawable/quads"
                    app:layout_constraintEnd_toStartOf="@+id/imageView9"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/icon1"
                    android:onClick="showPopup"
                    android:src="@drawable/hamstrings"
                    app:layout_constraintEnd_toStartOf="@+id/imageView7"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/icon1"
                    android:onClick="showPopup"
                    android:src="@drawable/calfs"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/imageView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="110dp"
                    android:layout_height="31dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/Quads"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/textView17"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView8" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="110dp"
                    android:layout_height="31dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/Hamstrings"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/textView16"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView15"
                    app:layout_constraintTop_toBottomOf="@+id/imageView9" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="110dp"
                    android:layout_height="31dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/Calves"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView17"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="372dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginLeft="19dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/core"
                    android:textSize="36sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/icon1"
                    android:onClick="showPopup"
                    android:src="@drawable/abs"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="110dp"
                    android:layout_height="31dp"
                    android:layout_marginLeft="15dp"
                    android:text="Abs"
                    android:textAlignment="center"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>